--- a/index.html
+++ b/index.html
@@ -335,9 +335,8 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <div class="swiper mobile">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
+          <ul class="main-new__menu mobile">
+              <li>
                 <div class="image">
                   <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
                   <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
@@ -348,8 +347,8 @@
                     밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
                   </p>
                 </div>
-              </div>
-              <div class="swiper-slide">
+              </li>
+              <li>
                 <div class="image">
                   <img src="./img/new_img2.png"
                     alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
@@ -362,8 +361,8 @@
                     맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
                   </p>
                 </div>
-              </div>
-              <div class="swiper-slide">
+              </li>
+              <li>
                 <div class="image">
                   <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
                   <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
@@ -374,8 +373,8 @@
                     맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
                   </p>
                 </div>
-              </div>
-              <div class="swiper-slide">
+              </li>
+              <li>
                 <div class="image">
                   <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
                   <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
@@ -386,8 +385,8 @@
                     밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
                   </p>
                 </div>
-              </div>
-              <div class="swiper-slide">
+              </li>
+              <li>
                 <div class="image">
                   <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
                   <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
@@ -398,8 +397,8 @@
                     펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
                   </p>
                 </div>
-              </div>
-              <div class="swiper-slide">
+              </li>
+              <li>
                 <div class="image">
                   <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
                   <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
@@ -410,9 +409,8 @@
                     밀크 앤 페퍼 MONGO Hoody (몽고 후디)
                   </p>
                 </div>
-              </div>
-            </div>
-          </div>
+              </li>
+          </ul>
 
         </div>
       </section>
