--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
               </div>
               <em class="title">꼬띠샵은 친환경 포장재를 사용합니다.</em>
             </li>
-            <li>
+            <li class="pc">
               <div class="poster">
                 <img src="./img/cotielog_img4.png" alt="2021.09 우수 리뷰 고객 캐리커쳐" />
               </div>
