--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         <div class="inner">
 
           <h3>Instagram<br class="only-m" />@cotie_shop</h3>
-          <ul class="main-instagram__menu">
+          <ul class="main-instagram__menu pc">
             <li>
               <a href="https://www.instagram.com/p/CVMtYWjLMgr/" target="_blank">
                 <img src="./img/insta_img1.jpg" alt="Christian Cowan x max-bone Jumper Hot Pink" />
@@ -500,6 +500,28 @@
             <li>
               <a href="https://www.instagram.com/p/CU608F8repK/" target="_blank">
                 <img src="./img/insta_img4.jpg" alt="Cotie Mb Eats Food Scoop & Bag Clip" />
+              </a>
+            </li>
+          </ul>
+          <ul class="main-instagram__menu mobile">
+            <li>
+              <a href="https://www.instagram.com/p/CVMuc1cLUJf/" target="_blank">
+                <img src="./img/insta_img1_m.jpg" alt="Fiber bamboo bowl 뱀부 식기" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/p/CVMuMI9rSfr/" target="_blank">
+                <img src="./img/insta_img2_m.jpg" alt="케이펫페어 일산 무료 초청권 이벤트" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/p/CVMtYWjLMgr/" target="_blank">
+                <img src="./img/insta_img3_m.jpg" alt="Christian Cowan x max-bone Jumper Hot Pink" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/p/CU63Ah-rbVo/" target="_blank">
+                <img src="./img/insta_img4_m.jpg" alt="IDOL Hoody 아이돌 후디" />
               </a>
             </li>
           </ul>
