--- a/index.html
+++ b/index.html
@@ -540,8 +540,17 @@
             <li><a href="#">Buy Shop</a></li>
           </ul>
           <ul class="footer__links">
-            <li><a href="https://www.facebook.com/cotieshop.co.kr/" target="_blank">facebook</a></li>
-            <li><a href="https://www.instagram.com/cotie_shop/" target="_blank">instagram</a></li>
+            <li>
+              <a href="https://www.facebook.com/cotieshop.co.kr/" target="_blank">
+                <span class="pc">facebook</span>
+                <i class="fab fa-facebook-f mobile"><span>facebook</span></i>  
+            </a>
+          </li>
+            <li><a href="https://www.instagram.com/cotie_shop/" target="_blank">
+              <span class="pc">instagram</span>
+              <i class="fab fa-instagram mobile"><span>instagram</span></i>
+            </a>
+            </li>
             <li><a href="https://accounts.kakao.com/login?continue=http%3A%2F%2Fpf.kakao.com%2F_ivZMs%2Fchat" target="_blank"><i class="fas fa-comment"></i></a></li>
           </ul>
         </div>
