--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <span></span>
           <span></span>
         </a>
-        <a href="#" class="close-btn mobile">
+        <a href="#" class="close-btn mobile invisible">
           <i class="fas fa-times"><span>닫기</span></i>
         </a>
         <!-- NAV -->
@@ -107,6 +107,8 @@
             </li>
             <li><a href="#">Cotielog</a></li>
             <li><a href="#">Store</a></li>
+            <li class="mobile"><a href="#">About Us</a></li>
+            <li class="mobile"><a href="#">Buy Shop</a></li>
           </ul>
         </nav>
         <ul class="top-menu">
@@ -116,7 +118,7 @@
               <span class="hide">검색창 열기</span>
             </a>
           </li>
-          <li>
+          <li class="pc">
             <a href="#">
               <span>Buy Shop</span>
               <i class="fas fa-shopping-bag"></i>
