--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       </section>
 
       <!-- NEW -->
-      <section class="main-new">
+      <section class="main-new scroll-spy">
         <h2 class="hide">꼬띠샵 신상품</h2>
         <div class="inner">
 
@@ -265,9 +265,9 @@
               <div class="swiper-slide">
                 <div class="image">
                   <img src="./img/new_img2.png"
-                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="front" />
                   <img src="./img/new_img2_back.png"
-                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="back" />
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="back" />
                 </div>
                 <div class="text-group">
                   <em class="title">MAXBONE</em>
@@ -338,7 +338,7 @@
             <div class="swiper-pagination"></div>
           </div>
           <ul class="main-new__menu mobile">
-              <li>
+              <li class="movement to-top delay-0">
                 <div class="image">
                   <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
                   <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
@@ -350,12 +350,12 @@
                   </p>
                 </div>
               </li>
-              <li>
+              <li class="movement to-top delay-0">
                 <div class="image">
                   <img src="./img/new_img2.png"
-                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="front" />
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="front" />
                   <img src="./img/new_img2_back.png"
-                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) <br />Hot Pink (핫핑크)" class="back" />
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="back" />
                 </div>
                 <div class="text-group">
                   <em class="title">MAXBONE</em>
@@ -364,7 +364,7 @@
                   </p>
                 </div>
               </li>
-              <li>
+              <li class="movement to-top delay-1">
                 <div class="image">
                   <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
                   <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
@@ -376,7 +376,7 @@
                   </p>
                 </div>
               </li>
-              <li>
+              <li class="movement to-top delay-1">
                 <div class="image">
                   <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
                   <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
@@ -388,7 +388,7 @@
                   </p>
                 </div>
               </li>
-              <li>
+              <li class="movement to-top delay-2">
                 <div class="image">
                   <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
                   <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
@@ -400,7 +400,7 @@
                   </p>
                 </div>
               </li>
-              <li>
+              <li class="movement to-top delay-2">
                 <div class="image">
                   <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
                   <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
