--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
             <div class="video__area">
-              <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline></video>
+              <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline poster="./img/maxbone_poster.jfif"></video>
             </div>
             <img src="./img/layer_maxbone.jpg" alt="" class="pattern pattern1" />
             <img src="./img/layer_maxbone.jpg" alt="" class="pattern pattern2" />
@@ -438,26 +438,26 @@
       </section>
 
       <!-- COTIELOG -->
-      <section class="main-cotielog">
+      <section class="main-cotielog scroll-spy">
         <h2 class="hide">꼬띠샵 소식지</h2>
         <div class="inner">
 
           <h3>Cotielog</h3>
 
           <ul class="main-cotielog__menu">
-            <li>
+            <li class="movement to-top delay-0">
               <div class="poster">
                 <img src="./img/cotielog_img1.jpg" alt="오프라인 입점 매장 안내" />
               </div>
               <em class="title">오프라인 입점 매장 안내</em>
             </li>
-            <li>
+            <li class="movement to-top delay-1">
               <div class="poster">
                 <img src="./img/cotielog_img2.png" alt="2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상" />
               </div>
               <em class="title">2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상</em>
             </li>
-            <li>
+            <li class="movement to-top delay-2">
               <div class="poster">
                 <img src="./img/cotielog_img3.jpg" alt="꼬띠샵은 친환경 포장재를 사용합니다." />
               </div>
