--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
           </div>
           <div class="maxbone scroll-spy">
-            <img src="./img/layer_toy.png" alt="" class="floating" />
+            <img src="./img/layer_toy.png" alt="" class="floating pc" />
             <div class="wrap">
               <div class="image">
                 <img src="./img/brand_maxbone.gif" alt="" />
@@ -235,8 +235,8 @@
                 <span>Discover more</span>
               </a>
             </div>
-            <img src="./img/layer_hand.png" alt="" class="floating floating1" />
-            <img src="./img/layer_heart.png" alt="" class="floating floating2" />
+            <img src="./img/layer_hand.png" alt="" class="floating floating1 pc" />
+            <img src="./img/layer_heart.png" alt="" class="floating floating2 pc" />
           </div>
         </div>
       </section>
