--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <img src="./img/pattern-grass-02.jpg" alt="" class="pattern pattern3" />
             <img src="./img/pattern-footprint.png" alt="" class="pattern pattern4" />
             <div class="video__area">
-              <video src="./video/pet-so-chic.mp4" autoplay muted loop preload="metadata" playsinline></video>
+              <video src="./video/pet-so-chic.mp4" autoplay muted loop preload="metadata" playsinline poster="./img/petsoshic_poster.jpg"></video>
             </div>
           </div>
           <div class="maxbone scroll-spy">
@@ -211,7 +211,7 @@
 
 
             <div class="video__area">
-              <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline poster="./img/maxbone_poster.jfif"></video>
+              <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline poster="./img/maxbone_poster.jpg"></video>
             </div>
             <img src="./img/layer_maxbone.jpg" alt="" class="pattern pattern1" />
             <img src="./img/layer_maxbone.jpg" alt="" class="pattern pattern2" />
