--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
             <img src="./img/pattern-grass-02.jpg" alt="" class="pattern pattern3" />
             <img src="./img/pattern-footprint.png" alt="" class="pattern pattern4" />
             <div class="video__area">
-              <video src="./video/pet-so-chic.mp4" autoplay muted loop preload="metadata" playsinline poster="./img/petsoshic_poster.jpg"></video>
+              <video src="./video/pet-so-chic.mp4" autoplay muted loop preload="metadata" playsinline
+                poster="./img/petsoshic_poster.jpg"></video>
             </div>
           </div>
           <div class="maxbone scroll-spy">
@@ -211,7 +212,8 @@
 
 
             <div class="video__area">
-              <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline poster="./img/maxbone_poster.jpg"></video>
+              <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline
+                poster="./img/maxbone_poster.jpg"></video>
             </div>
             <img src="./img/layer_maxbone.jpg" alt="" class="pattern pattern1" />
             <img src="./img/layer_maxbone.jpg" alt="" class="pattern pattern2" />
@@ -338,80 +340,80 @@
             <div class="swiper-pagination"></div>
           </div>
           <ul class="main-new__menu mobile">
-              <li class="movement to-top delay-0">
-                <div class="image">
-                  <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
-                  <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MILK &amp; PEPPER</em>
-                  <p class="description">
-                    밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
-                  </p>
-                </div>
-              </li>
-              <li class="movement to-top delay-0">
-                <div class="image">
-                  <img src="./img/new_img2.png"
-                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="front" />
-                  <img src="./img/new_img2_back.png"
-                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MAXBONE</em>
-                  <p class="description">
-                    맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
-                  </p>
-                </div>
-              </li>
-              <li class="movement to-top delay-1">
-                <div class="image">
-                  <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
-                  <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MAXBONE</em>
-                  <p class="description">
-                    맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
-                  </p>
-                </div>
-              </li>
-              <li class="movement to-top delay-1">
-                <div class="image">
-                  <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
-                  <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MILK &amp; PEPPER</em>
-                  <p class="description">
-                    밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
-                  </p>
-                </div>
-              </li>
-              <li class="movement to-top delay-2">
-                <div class="image">
-                  <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
-                  <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">PET SO CHIC</em>
-                  <p class="description">
-                    펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
-                  </p>
-                </div>
-              </li>
-              <li class="movement to-top delay-2">
-                <div class="image">
-                  <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
-                  <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MILK &amp; PEPPER</em>
-                  <p class="description">
-                    밀크 앤 페퍼 MONGO Hoody (몽고 후디)
-                  </p>
-                </div>
-              </li>
+            <li class="movement to-top delay-0">
+              <div class="image">
+                <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
+                <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
+              </div>
+              <div class="text-group">
+                <em class="title">MILK &amp; PEPPER</em>
+                <p class="description">
+                  밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
+                </p>
+              </div>
+            </li>
+            <li class="movement to-top delay-0">
+              <div class="image">
+                <img src="./img/new_img2.png"
+                  alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="front" />
+                <img src="./img/new_img2_back.png"
+                  alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="back" />
+              </div>
+              <div class="text-group">
+                <em class="title">MAXBONE</em>
+                <p class="description">
+                  맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
+                </p>
+              </div>
+            </li>
+            <li class="movement to-top delay-1">
+              <div class="image">
+                <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
+                <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
+              </div>
+              <div class="text-group">
+                <em class="title">MAXBONE</em>
+                <p class="description">
+                  맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
+                </p>
+              </div>
+            </li>
+            <li class="movement to-top delay-1">
+              <div class="image">
+                <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
+                <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
+              </div>
+              <div class="text-group">
+                <em class="title">MILK &amp; PEPPER</em>
+                <p class="description">
+                  밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
+                </p>
+              </div>
+            </li>
+            <li class="movement to-top delay-2">
+              <div class="image">
+                <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
+                <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
+              </div>
+              <div class="text-group">
+                <em class="title">PET SO CHIC</em>
+                <p class="description">
+                  펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
+                </p>
+              </div>
+            </li>
+            <li class="movement to-top delay-2">
+              <div class="image">
+                <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
+                <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
+              </div>
+              <div class="text-group">
+                <em class="title">MILK &amp; PEPPER</em>
+                <p class="description">
+                  밀크 앤 페퍼 MONGO Hoody (몽고 후디)
+                </p>
+              </div>
+            </li>
           </ul>
 
         </div>
@@ -446,28 +448,36 @@
 
           <ul class="main-cotielog__menu">
             <li class="movement to-top delay-0">
-              <div class="poster">
-                <img src="./img/cotielog_img1.jpg" alt="오프라인 입점 매장 안내" />
-              </div>
-              <em class="title">오프라인 입점 매장 안내</em>
+              <a href="#">
+                <div class="poster">
+                  <img src="./img/cotielog_img1.jpg" alt="오프라인 입점 매장 안내" />
+                </div>
+                <em class="title">오프라인 입점 매장 안내</em>
+              </a>
             </li>
             <li class="movement to-top delay-1">
-              <div class="poster">
-                <img src="./img/cotielog_img2.png" alt="2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상" />
-              </div>
-              <em class="title">2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상</em>
+              <a href="#">
+                <div class="poster">
+                  <img src="./img/cotielog_img2.png" alt="2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상" />
+                </div>
+                <em class="title">2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상</em>
+              </a>
             </li>
             <li class="movement to-top delay-2">
-              <div class="poster">
-                <img src="./img/cotielog_img3.jpg" alt="꼬띠샵은 친환경 포장재를 사용합니다." />
-              </div>
-              <em class="title">꼬띠샵은 친환경 포장재를 사용합니다.</em>
+              <a href="#">
+                <div class="poster">
+                  <img src="./img/cotielog_img3.jpg" alt="꼬띠샵은 친환경 포장재를 사용합니다." />
+                </div>
+                <em class="title">꼬띠샵은 친환경 포장재를 사용합니다.</em>
+              </a>
             </li>
-            <li class="pc">
-              <div class="poster">
-                <img src="./img/cotielog_img4.png" alt="2021.09 우수 리뷰 고객 캐리커쳐" />
-              </div>
-              <em class="title">2021.09 우수 리뷰 고객 캐리커쳐</em>
+            <li class="movement to-top delay-3">
+              <a href="#">
+                <div class="poster">
+                  <img src="./img/cotielog_img4.png" alt="2021.09 우수 리뷰 고객 캐리커쳐" />
+                </div>
+                <em class="title">2021.09 우수 리뷰 고객 캐리커쳐</em>
+              </a>
             </li>
           </ul>
           <a href="#" class="btn">
@@ -545,15 +555,16 @@
             <li>
               <a href="https://www.facebook.com/cotieshop.co.kr/" target="_blank">
                 <span class="pc">facebook</span>
-                <i class="fab fa-facebook-f mobile"><span>facebook</span></i>  
-            </a>
-          </li>
-            <li><a href="https://www.instagram.com/cotie_shop/" target="_blank">
-              <span class="pc">instagram</span>
-              <i class="fab fa-instagram mobile"><span>instagram</span></i>
-            </a>
+                <i class="fab fa-facebook-f mobile"><span>facebook</span></i>
+              </a>
             </li>
-            <li><a href="https://accounts.kakao.com/login?continue=http%3A%2F%2Fpf.kakao.com%2F_ivZMs%2Fchat" target="_blank"><i class="fas fa-comment"></i></a></li>
+            <li><a href="https://www.instagram.com/cotie_shop/" target="_blank">
+                <span class="pc">instagram</span>
+                <i class="fab fa-instagram mobile"><span>instagram</span></i>
+              </a>
+            </li>
+            <li><a href="https://accounts.kakao.com/login?continue=http%3A%2F%2Fpf.kakao.com%2F_ivZMs%2Fchat"
+                target="_blank"><i class="fas fa-comment"></i></a></li>
           </ul>
         </div>
         <div class="row">
@@ -587,10 +598,10 @@
       <div class="to-top-punch">
         <img src="./img/to_top_scratch1.svg" alt="" class="scratch1" />
         <img src="./img/to_top_scratch2.svg" alt="" class="scratch2" />
-        <img src="" alt="" class="punch" />
+        <img src="./img/punch1.svg" alt="" class="punch" />
       </div>
     </a>
-    
+
   </div>
 
   <script>
