--- a/index.html
+++ b/index.html
@@ -253,78 +253,90 @@
           <div class="swiper pc">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="image">
-                  <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
-                  <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MILK &amp; PEPPER</em>
-                  <p class="description">
-                    밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
+                    <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
+                    </p>
+                  </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="image">
-                  <img src="./img/new_img2.png"
-                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="front" />
-                  <img src="./img/new_img2_back.png"
-                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MAXBONE</em>
-                  <p class="description">
-                    맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/new_img2.png"
+                      alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="front" />
+                    <img src="./img/new_img2_back.png"
+                      alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MAXBONE</em>
+                    <p class="description">
+                      맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
+                    </p>
+                  </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="image">
-                  <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
-                  <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MAXBONE</em>
-                  <p class="description">
-                    맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
+                    <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MAXBONE</em>
+                    <p class="description">
+                      맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
+                    </p>
+                  </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="image">
-                  <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
-                  <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MILK &amp; PEPPER</em>
-                  <p class="description">
-                    밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
+                    <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
+                    </p>
+                  </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="image">
-                  <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
-                  <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">PET SO CHIC</em>
-                  <p class="description">
-                    펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
+                    <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">PET SO CHIC</em>
+                    <p class="description">
+                      펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
+                    </p>
+                  </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="image">
-                  <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
-                  <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
-                </div>
-                <div class="text-group">
-                  <em class="title">MILK &amp; PEPPER</em>
-                  <p class="description">
-                    밀크 앤 페퍼 MONGO Hoody (몽고 후디)
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
+                    <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크 앤 페퍼 MONGO Hoody (몽고 후디)
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
             <div class="swiper-prev">
@@ -341,78 +353,90 @@
           </div>
           <ul class="main-new__menu mobile">
             <li class="movement to-top delay-0">
-              <div class="image">
-                <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
-                <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
-              </div>
-              <div class="text-group">
-                <em class="title">MILK &amp; PEPPER</em>
-                <p class="description">
-                  밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
-                </p>
-              </div>
+              <a href="#">
+                <div class="image">
+                  <img src="./img/new_img1.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="front" />
+                  <img src="./img/new_img1_back.jpg" alt="밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 ARTIMON Hoody (아티멍 후디)
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="movement to-top delay-0">
-              <div class="image">
-                <img src="./img/new_img2.png"
-                  alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="front" />
-                <img src="./img/new_img2_back.png"
-                  alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="back" />
-              </div>
-              <div class="text-group">
-                <em class="title">MAXBONE</em>
-                <p class="description">
-                  맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
-                </p>
-              </div>
+              <a href="#">
+                <div class="image">
+                  <img src="./img/new_img2.png"
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="front" />
+                  <img src="./img/new_img2_back.png"
+                    alt="맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼) Hot Pink (핫핑크)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MAXBONE</em>
+                  <p class="description">
+                    맥스본 Christian Cowan x max-bone Jumper(크리스찬 코완 x 맥스본 점퍼)
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="movement to-top delay-1">
-              <div class="image">
-                <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
-                <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
-              </div>
-              <div class="text-group">
-                <em class="title">MAXBONE</em>
-                <p class="description">
-                  맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
-                </p>
-              </div>
+              <a href="#">
+                <div class="image">
+                  <img src="./img/new_img3.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="front" />
+                  <img src="./img/new_img3_back.jpg" alt="맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MAXBONE</em>
+                  <p class="description">
+                    맥스본 Tai Knit Jumper (타이 니트 점퍼) Taupe (토프)
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="movement to-top delay-1">
-              <div class="image">
-                <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
-                <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
-              </div>
-              <div class="text-group">
-                <em class="title">MILK &amp; PEPPER</em>
-                <p class="description">
-                  밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
-                </p>
-              </div>
+              <a href="#">
+                <div class="image">
+                  <img src="./img/new_img4.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="front" />
+                  <img src="./img/new_img4_back.jpg" alt="밀크 앤 페퍼 ROOKIE Hoody (루키 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 ROOKIE Hoody (루키 후디)
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="movement to-top delay-2">
-              <div class="image">
-                <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
-                <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
-              </div>
-              <div class="text-group">
-                <em class="title">PET SO CHIC</em>
-                <p class="description">
-                  펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
-                </p>
-              </div>
+              <a href="#">
+                <div class="image">
+                  <img src="./img/new_img5.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="front" />
+                  <img src="./img/new_img5_back.jpg" alt="펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">PET SO CHIC</em>
+                  <p class="description">
+                    펫 소 시크 Warm so chic(패딩 자켓) – Red(레드)
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="movement to-top delay-2">
-              <div class="image">
-                <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
-                <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
-              </div>
-              <div class="text-group">
-                <em class="title">MILK &amp; PEPPER</em>
-                <p class="description">
-                  밀크 앤 페퍼 MONGO Hoody (몽고 후디)
-                </p>
-              </div>
+              <a href="#">
+                <div class="image">
+                  <img src="./img/new_img6.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="front" />
+                  <img src="./img/new_img6_back.jpg" alt="밀크 앤 페퍼 MONGO Hoody (몽고 후디)" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 MONGO Hoody (몽고 후디)
+                  </p>
+                </div>
+              </a>
             </li>
           </ul>
 
