--- a/index.html
+++ b/index.html
@@ -129,6 +129,40 @@
       </div>
     </header>
 
+    <div class="search-modal__wrap invisible">
+      <div id="search-modal">
+        <div class="inner">
+          <h2 class="hide">검색창</h2>
+
+          <div class="search-modal__header">
+            <a href="./index.html" class="logo">
+              <img src="./img/header_logo.svg" alt="cotie SHOP" />
+            </a>
+            <a href="#" class="close-btn">
+              <i class="fas fa-times"><span>닫기</span></i>
+            </a>
+          </div>
+          <div class="search-modal__field">
+            <form action="#">
+              <input type="text" placeholder="검색어를 입력해주세요">
+            </form>
+            <a href="#">
+              <i class="fas fa-search"></i>
+            </a>
+          </div>
+          <div class="search-modal__keyword">
+            <ul>
+              <li><a href="#">#겨울</a></li>
+              <li><a href="#">#패딩</a></li>
+              <li><a href="#">#프랑스</a></li>
+              <li><a href="#">#후드</a></li>
+              <li><a href="#">#장난감</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- MAIN -->
     <main id="main">
       <section class="main-visual">
