--- a/index.html
+++ b/index.html
@@ -129,9 +129,11 @@
       </div>
     </header>
 
+    <!-- SEARCH MODAL -->
     <div class="search-modal__wrap invisible">
       <div id="search-modal">
         <div class="inner">
+
           <h2 class="hide">검색창</h2>
 
           <div class="search-modal__header">
@@ -159,6 +161,7 @@
               <li><a href="#">#장난감</a></li>
             </ul>
           </div>
+          <img src="./img/layer_twerking.gif" alt="" class="floating" />
         </div>
       </div>
     </div>
