--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <h2 class="hide">검색창</h2>
 
           <div class="search-modal__header">
-            <a href="./index.html" class="logo">
+            <a href="./index.html" class="logo pc">
               <img src="./img/header_logo.svg" alt="cotie SHOP" />
             </a>
             <a href="#" class="close-btn">
