--- a/brands.html
+++ b/brands.html
@@ -182,6 +182,30 @@
           <img src="./img/brands/layer_cat.png" alt="" class="floating floating1" />
           <img src="./img/brands/layer_hand.png" alt="" class="floating floating2" />
           <img src="./img/brands/layer_heart.png" alt="" class="floating floating3" />
+
+        </div>
+      </section>
+
+      <!-- ABOUT -->
+      <section class="brand-about">
+        <h2 class="hide">브랜드 설명</h2>
+        <div class="inner">
+
+          <div class="image">
+            <img src="./img/brands/about_img.jpg" alt="" />
+          </div>
+          <div class="content-group">
+            <div class="title">
+              <img src="./img/brands/about_logo.svg" alt="MILK&PEPPER" />
+            </div>
+            <em>나의 반려동물을 위한 시크하고 트렌디한 패션 아이템</em>
+            <div class="description">
+              밀크 앤 페퍼는 실용성은 물론 반려견에게 가장 편안한 착용감을 선사하는 것을 목표로 합니다.<br />
+              국내 브랜드에서 찾아보기 힘든 다양하고 체계적인 사이즈를 제공하며,<br />
+              다른 견종들과 체형이 다른 불독과 퍼그를 위한 컬렉션을 제작하는 등 세상 모든 반려견들이<br />
+              입을 수 있는 대표 브랜드가 될 수 있도록 노력하고 있습니다.
+            </div>
+          </div>
         </div>
       </section>
     </main>
