--- a/brands.html
+++ b/brands.html
@@ -58,7 +58,7 @@
   <script defer src="./js/common.js"></script>
 
 </head>
-<body>
+<body class="brands">
   <div id="wrapper">
     <a href="#main" id="skip-nav">본문 바로가기</a>
 
@@ -199,13 +199,40 @@
               <img src="./img/brands/about_logo.svg" alt="MILK&PEPPER" />
             </div>
             <em>나의 반려동물을 위한 시크하고 트렌디한 패션 아이템</em>
-            <div class="description">
+            <p class="description">
               밀크 앤 페퍼는 실용성은 물론 반려견에게 가장 편안한 착용감을 선사하는 것을 목표로 합니다.<br />
               국내 브랜드에서 찾아보기 힘든 다양하고 체계적인 사이즈를 제공하며,<br />
               다른 견종들과 체형이 다른 불독과 퍼그를 위한 컬렉션을 제작하는 등 세상 모든 반려견들이<br />
               입을 수 있는 대표 브랜드가 될 수 있도록 노력하고 있습니다.
-            </div>
+            </p>
           </div>
+
+        </div>
+      </section>
+
+      <!-- STORY -->
+      <section class="brand-story">
+        <h2 class="hide">창업자 스토리</h2>
+        <div class="inner">
+
+          <div class="content-group">
+            <em class="title">창업자 스토리</em>
+            <p class="description">
+              2009년 프랑스 아동복 브랜드의 아트 디렉터인<br />
+              Sylvain Brejon에 의해 시작된 밀크 앤 페퍼는 뛰어난 품질의<br />
+              패브릭을 생산하는 것으로 유명한 프랑스 숄레에 자리잡고 있습니다.<br />
+              프렌치한 감성을 담아 시크한 반려견 패션 브랜드로써 성장한<br />
+              밀크 앤 페퍼는 이제 전 세계적으로 인정받고 있습니다.
+            </p>
+          </div>
+          <div class="image">
+            <img src="./img/brands/story_img.jpg" alt="" />
+          </div>
+          <div class="color">
+            <img src="./img/brands/layer_circle_black.png" alt=""  />
+            <img src="./img/brands/layer_circle_pink.png" alt="" />
+          </div>
+          
         </div>
       </section>
     </main>
