CSS: BRAND-VIDEO

--- a/brands.html
+++ b/brands.html
@@ -232,7 +232,19 @@
             <img src="./img/brands/layer_circle_black.png" alt=""  />
             <img src="./img/brands/layer_circle_pink.png" alt="" />
           </div>
-          
+
+        </div>
+      </section>
+
+      <!-- VIDEO -->
+      <section class="brand-video">
+        <h2 class="hide">비디오 재생 영역</h2>
+        <div class="inner">
+
+          <div class="video__area">
+            <video src="./video/milk-pepper.mp4" autoplay muted loop preload="metadata" playsinline
+            poster="./img/brands/milkpepper_poster.jpg"></video>
+          </div>
         </div>
       </section>
     </main>
