--- a/brands.html
+++ b/brands.html
@@ -241,10 +241,14 @@
         <h2 class="hide">비디오 재생 영역</h2>
         <div class="inner">
 
+          <img src="./img/pattern-grass-05.jpg" alt="" class="pattern pattern1" />
+          <img src="./img/pattern-grass-01.jpg" alt="" class="pattern pattern2" />
+          <img src="./img/pattern-grass-02.jpg" alt="" class="pattern pattern3" />
           <div class="video__area">
             <video src="./video/milk-pepper.mp4" autoplay muted loop preload="metadata" playsinline
             poster="./img/brands/milkpepper_poster.jpg"></video>
           </div>
+
         </div>
       </section>
     </main>
