--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
       </section>
 
       <!-- SLOGAN -->
-      <section class="main-slogan">
+      <section class="main-slogan slogan">
         <h2 class="hide">꼬띠샵 슬로건</h2>
 
         <div class="text-group">
