--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
         <a href="#" class="menu-btn mobile">
           <span></span>
           <span></span>
+          <span class="hide">네비게이션 열기</span>
         </a>
         <a href="#" class="close-btn mobile invisible">
-          <i class="fas fa-times"><span>닫기</span></i>
+          <i class="fas fa-times"><span>네비게이션 닫기</span></i>
         </a>
         <!-- NAV -->
         <nav id="gnb">
@@ -168,6 +169,7 @@
 
     <!-- MAIN -->
     <main id="main">
+      
       <!-- VISUAL -->
       <section class="main-visual visual">
         <h2 class="hide">비주얼 영역</h2>
