--- a/brands.html
+++ b/brands.html
@@ -69,9 +69,10 @@
         <a href="#" class="menu-btn mobile">
           <span></span>
           <span></span>
+          <span class="hide">네비게이션 열기</span>
         </a>
         <a href="#" class="close-btn mobile invisible">
-          <i class="fas fa-times"><span>닫기</span></i>
+          <i class="fas fa-times"><span>네비게이션 닫기</span></i>
         </a>
         <!-- NAV -->
         <nav id="gnb">
@@ -168,6 +169,7 @@
 
     <!-- MAIN -->
     <main id="main">
+      
       <!-- VISUAL -->
       <section class="brand-visual visual">
         <h2 class="hide">비주얼 영역</h2>
@@ -251,6 +253,18 @@
 
         </div>
       </section>
+
+      <!-- SLOGAN -->
+      <section class="brand-slogan slogan">
+        <h2 class="hide">밀크앤페퍼 슬로건</h2>
+
+        <div class="text-group">
+          <span>La marque préférée par vos chiens.</span>
+          <span>La marque préférée par vos chiens.</span>
+          <span>La marque préférée par vos chiens.</span>
+          <span>La marque préférée par vos chiens.</span>
+        </div>
+      </section>      
     </main>
 
     <!-- FOOTER -->
