CSS: BRAND-VALUE

--- a/brands.html
+++ b/brands.html
@@ -196,7 +196,7 @@
           <div class="image">
             <img src="./img/brands/about_img.jpg" alt="" />
           </div>
-          <div class="content-group">
+          <div class="text-group">
             <div class="title">
               <img src="./img/brands/about_logo.svg" alt="MILK&PEPPER" />
             </div>
@@ -217,7 +217,7 @@
         <h2 class="hide">창업자 스토리</h2>
         <div class="inner">
 
-          <div class="content-group">
+          <div class="text-group">
             <em class="title">창업자 스토리</em>
             <p class="description">
               2009년 프랑스 아동복 브랜드의 아트 디렉터인<br />
@@ -256,7 +256,7 @@
 
       <!-- SLOGAN -->
       <section class="brand-slogan slogan">
-        <h2 class="hide">밀크앤페퍼 슬로건</h2>
+        <h2 class="hide">밀크 앤 페퍼 슬로건</h2>
 
         <div class="text-group">
           <span>La marque préférée par vos chiens.</span>
@@ -265,6 +265,40 @@
           <span>La marque préférée par vos chiens.</span>
         </div>
       </section>      
+
+      <!-- VALUE -->
+      <section class="brand-value">
+        <h2 class="hide">밀크 앤 페퍼 가치관</h2>
+        <div class="inner">
+
+          <div class="row">
+            <div class="image">
+              <img src="./img/brands/value_img1.gif" alt="" />
+            </div>
+              <div class="text-group">
+                <em class="title">유쾌한 디자인과 편안한 착용감</em>
+                <p class="description">
+                  밀크 앤 페퍼는 매 시즌 패션과 인테리어 디자인에<br />
+                  영감을 받은 트렌디하고 유쾌한 디자인을 선보이고 있으며,<br />
+                  반려견에게 가장 편안한 착용감을 선사하기 위해<br />
+                  최적의 사이즈를 제공합니다.
+                </p>
+              </div>
+          </div>
+          <div class="row">
+              <div class="text-group">
+                <div class="title">
+                  Des produits chics et tendances pour
+                  nos compagnons fidèles.
+                </div>
+              </div>
+              <div class="image">
+                <img src="./img/brands/value_img2.jpg" alt="" />
+              </div>
+          </div>
+
+        </div>
+      </section>
     </main>
 
     <!-- FOOTER -->
