CSS: BRAND-CHOICE

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       </section>
 
       <!-- NEW -->
-      <section class="main-new scroll-spy">
+      <section class="main-new product scroll-spy">
         <h2 class="hide">꼬띠샵 신상품</h2>
         <div class="inner">
 
@@ -391,7 +391,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <ul class="main-new__menu mobile">
+          <ul class="main-new__menu product__menu mobile">
             <li class="movement to-top delay-0">
               <a href="#">
                 <div class="image">
