--- a/brands.html
+++ b/brands.html
@@ -196,7 +196,7 @@
           <div class="image">
             <img src="./img/brands/about_img.jpg" alt="" />
           </div>
-          <div class="text-group">
+          <div class="content-group">
             <div class="title">
               <img src="./img/brands/about_logo.svg" alt="MILK&PEPPER" />
             </div>
@@ -217,7 +217,7 @@
         <h2 class="hide">창업자 스토리</h2>
         <div class="inner">
 
-          <div class="text-group">
+          <div class="content-group">
             <em class="title">창업자 스토리</em>
             <p class="description">
               2009년 프랑스 아동복 브랜드의 아트 디렉터인<br />
@@ -268,14 +268,14 @@
 
       <!-- VALUE -->
       <section class="brand-value">
-        <h2 class="hide">밀크 앤 페퍼 가치관</h2>
+        <h2 class="hide">브랜드 가치관</h2>
         <div class="inner">
 
           <div class="row">
             <div class="image">
               <img src="./img/brands/value_img1.gif" alt="" />
             </div>
-              <div class="text-group">
+              <div class="content-group">
                 <em class="title">유쾌한 디자인과 편안한 착용감</em>
                 <p class="description">
                   밀크 앤 페퍼는 매 시즌 패션과 인테리어 디자인에<br />
@@ -286,7 +286,7 @@
               </div>
           </div>
           <div class="row">
-              <div class="text-group">
+              <div class="content-group">
                 <div class="title">
                   Des produits chics et tendances pour
                   nos compagnons fidèles.
@@ -297,6 +297,209 @@
               </div>
           </div>
 
+        </div>
+      </section>
+
+      <!-- CHOICE -->
+      <section class="brand-choice product scroll-spy">
+        <h2 class="hide">인기 상품</h2>
+        <div class="inner">
+
+          <h3>MD's choice</h3>
+
+          <div class="swiper pc">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/brands/choice_img1.jpg" alt="" class="front" />
+                    <img src="./img/brands/choice_img1_back.jpg" alt="" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크 앤 페퍼 STARDUST Titan Cat Collar
+                      (스타더스트 티탄 고양이 목줄)
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/brands/choice_img2.jpg" alt="" class="front" />
+                    <img src="./img/brands/choice_img2_back.jpg" alt="" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크 앤 페퍼 Campus Red Puff Jacket
+                      (캠퍼스 레드 자켓) 대형견 사이즈 (55-75)
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/brands/choice_img3.jpg" alt="" class="front" />
+                    <img src="./img/brands/choice_img3_back.jpg" alt="" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크 앤 페퍼 VELVET Reversible Puff Jacket
+                      (벨벳 리버서블 퍼프 자켓)
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/brands/choice_img4.jpg" alt="" class="front" />
+                    <img src="./img/brands/choice_img4_back.jpg" alt="" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크 앤 페퍼 IDOL Hoody (아이돌 후디)
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/brands/choice_img5.jpg" alt="" class="front" />
+                    <img src="./img/brands/choice_img5_back.jpg" alt="" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크 앤 페퍼 PIOGGIA Fuschia Dotted Raincoat (피오자 푸시아 도트 레인코트)
+                    </p>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="image">
+                    <img src="./img/brands/choice_img6.jpg" alt="" class="front" />
+                    <img src="./img/brands/choice_img6_back.jpg" alt="" class="back" />
+                  </div>
+                  <div class="text-group">
+                    <em class="title">MILK &amp; PEPPER</em>
+                    <p class="description">
+                      밀크앤페퍼 STARDUST Copper Leash
+                      (스타더스트 쿠퍼 리드줄)
+                    </p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="swiper-prev">
+              <span class="material-icons">
+                arrow_back
+              </span>
+            </div>
+            <div class="swiper-next">
+              <span class="material-icons">
+                arrow_forward
+              </span>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <ul class="brand-choice__menu product__menu mobile">
+            <li class="movement to-top delay-0">
+              <a href="#">
+                <div class="image">
+                  <img src="./img/brands/choice_img1.jpg" alt="" class="front" />
+                  <img src="./img/brands/choice_img1_back.jpg" alt="" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 STARDUST Titan Cat Collar
+                    (스타더스트 티탄 고양이 목줄)
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="movement to-top delay-0">
+              <a href="#">
+                <div class="image">
+                  <img src="./img/brands/choice_img2.jpg" alt="" class="front" />
+                  <img src="./img/brands/choice_img2_back.jpg" alt="" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 Campus Red Puff Jacket
+                    (캠퍼스 레드 자켓) 대형견 사이즈 (55-75)
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="movement to-top delay-1">
+              <a href="#">
+                <div class="image">
+                  <img src="./img/brands/choice_img3.jpg" alt="" class="front" />
+                  <img src="./img/brands/choice_img3_back.jpg" alt="" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 VELVET Reversible Puff Jacket
+                    (벨벳 리버서블 퍼프 자켓)
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="movement to-top delay-1">
+              <a href="#">
+                <div class="image">
+                  <img src="./img/brands/choice_img4.jpg" alt="" class="front" />
+                  <img src="./img/brands/choice_img4_back.jpg" alt="" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 IDOL Hoody (아이돌 후디)
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="movement to-top delay-2">
+              <a href="#">
+                <div class="image">
+                  <img src="./img/brands/choice_img5.jpg" alt="" class="front" />
+                  <img src="./img/brands/choice_img5_back.jpg" alt="" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크 앤 페퍼 PIOGGIA Fuschia Dotted Raincoat (피오자 푸시아 도트 레인코트)
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="movement to-top delay-2">
+              <a href="#">
+                <div class="image">
+                  <img src="./img/brands/choice_img6.jpg" alt="" class="front" />
+                  <img src="./img/brands/choice_img6_back.jpg" alt="" class="back" />
+                </div>
+                <div class="text-group">
+                  <em class="title">MILK &amp; PEPPER</em>
+                  <p class="description">
+                    밀크앤페퍼 STARDUST Copper Leash
+                    (스타더스트 쿠퍼 리드줄)
+                  </p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
