--- a/brands.html
+++ b/brands.html
@@ -502,6 +502,21 @@
           </ul>
         </div>
       </section>
+
+      <!-- VIEW -->
+      <section class="brand-view">
+        <h2 class="hide">다른 브랜드 링크 페이지</h2>
+        <div class="inner">
+          
+          <div class="text-group">
+            <h3>PET SO CHIC</h3>
+            <a href="#">
+              <span>BRAND VIEW</span>
+            </a>
+          </div>
+
+        </div>
+      </section>
     </main>
 
     <!-- FOOTER -->
