--- a/brands.html
+++ b/brands.html
@@ -181,9 +181,9 @@
           <div class="image">
             <img src="./img/brands/brand-visual.gif" alt="MILK&PEPPER" />
           </div>
-          <img src="./img/brands/layer_cat.png" alt="" class="floating floating1" />
-          <img src="./img/brands/layer_hand.png" alt="" class="floating floating2" />
-          <img src="./img/brands/layer_heart.png" alt="" class="floating floating3" />
+          <img src="./img/brands/layer_cat.png" alt="" class="floating floating1 pc" />
+          <img src="./img/brands/layer_hand.png" alt="" class="floating floating2 pc" />
+          <img src="./img/brands/layer_heart.png" alt="" class="floating floating3 pc" />
 
         </div>
       </section>
@@ -197,14 +197,14 @@
             <img src="./img/brands/about_img.jpg" alt="" />
           </div>
           <div class="content-group">
-            <div class="title">
+            <div class="title pc">
               <img src="./img/brands/about_logo.svg" alt="MILK&PEPPER" />
             </div>
             <em>나의 반려동물을 위한 시크하고 트렌디한 패션 아이템</em>
             <p class="description">
-              밀크 앤 페퍼는 실용성은 물론 반려견에게 가장 편안한 착용감을 선사하는 것을 목표로 합니다.<br />
-              국내 브랜드에서 찾아보기 힘든 다양하고 체계적인 사이즈를 제공하며,<br />
-              다른 견종들과 체형이 다른 불독과 퍼그를 위한 컬렉션을 제작하는 등 세상 모든 반려견들이<br />
+              밀크 앤 페퍼는 실용성은 물론 반려견에게 가장 편안한 착용감을 선사하는 것을 목표로 합니다.<br class="only-pc" />
+              국내 브랜드에서 찾아보기 힘든 다양하고 체계적인 사이즈를 제공하며,<br class="only-pc" />
+              다른 견종들과 체형이 다른 불독과 퍼그를 위한 컬렉션을 제작하는 등 세상 모든 반려견들이<br class="only-pc" />
               입을 수 있는 대표 브랜드가 될 수 있도록 노력하고 있습니다.
             </p>
           </div>
@@ -217,20 +217,23 @@
         <h2 class="hide">창업자 스토리</h2>
         <div class="inner">
 
+          <div class="image mobile">
+            <img src="./img/brands/story_img.jpg" alt="" />
+          </div>
           <div class="content-group">
             <em class="title">창업자 스토리</em>
             <p class="description">
-              2009년 프랑스 아동복 브랜드의 아트 디렉터인<br />
-              Sylvain Brejon에 의해 시작된 밀크 앤 페퍼는 뛰어난 품질의<br />
-              패브릭을 생산하는 것으로 유명한 프랑스 숄레에 자리잡고 있습니다.<br />
-              프렌치한 감성을 담아 시크한 반려견 패션 브랜드로써 성장한<br />
+              2009년 프랑스 아동복 브랜드의 아트 디렉터인<br class="only-pc" />
+              Sylvain Brejon에 의해 시작된 밀크 앤 페퍼는 뛰어난 품질의<br class="only-pc" />
+              패브릭을 생산하는 것으로 유명한 프랑스 숄레에 자리잡고 있습니다.<br class="only-pc" />
+              프렌치한 감성을 담아 시크한 반려견 패션 브랜드로써 성장한<br class="only-pc" />
               밀크 앤 페퍼는 이제 전 세계적으로 인정받고 있습니다.
             </p>
           </div>
-          <div class="image">
+          <div class="image pc">
             <img src="./img/brands/story_img.jpg" alt="" />
           </div>
-          <div class="color">
+          <div class="color pc">
             <img src="./img/brands/layer_circle_black.png" alt="" />
             <img src="./img/brands/layer_circle_pink.png" alt="" />
           </div>
@@ -243,9 +246,9 @@
         <h2 class="hide">비디오 재생 영역</h2>
         <div class="inner">
 
-          <img src="./img/pattern-grass-05.jpg" alt="" class="pattern pattern1" />
-          <img src="./img/pattern-grass-01.jpg" alt="" class="pattern pattern2" />
-          <img src="./img/pattern-grass-02.jpg" alt="" class="pattern pattern3" />
+          <img src="./img/pattern-grass-05.jpg" alt="" class="pattern pattern1 pc" />
+          <img src="./img/pattern-grass-01.jpg" alt="" class="pattern pattern2 pc" />
+          <img src="./img/pattern-grass-02.jpg" alt="" class="pattern pattern3 pc" />
           <div class="video__area">
             <video src="./video/milk-pepper.mp4" autoplay muted loop preload="metadata" playsinline
               poster="./img/brands/milkpepper_poster.jpg"></video>
