min-width: 768px

--- a/brands.html
+++ b/brands.html
@@ -281,9 +281,9 @@
             <div class="content-group">
               <em class="title">유쾌한 디자인과 편안한 착용감</em>
               <p class="description">
-                밀크 앤 페퍼는 매 시즌 패션과 인테리어 디자인에<br />
-                영감을 받은 트렌디하고 유쾌한 디자인을 선보이고 있으며,<br />
-                반려견에게 가장 편안한 착용감을 선사하기 위해<br />
+                밀크 앤 페퍼는 매 시즌 패션과 인테리어 디자인에<br class="only-pc" />
+                영감을 받은 트렌디하고 유쾌한 디자인을 선보이고 있으며,<br class="only-pc" />
+                반려견에게 가장 편안한 착용감을 선사하기 위해<br class="only-pc" />
                 최적의 사이즈를 제공합니다.
               </p>
             </div>
