--- a/brands.html
+++ b/brands.html
@@ -107,7 +107,7 @@
               </ul>
             </li>
             <li><a href="#">Cotielog</a></li>
-            <li><a href="#">Store</a></li>
+            <li><a href="./store.html">Store</a></li>
             <li class="mobile"><a href="#">About Us</a></li>
             <li class="mobile"><a href="#">Buy Shop</a></li>
           </ul>
@@ -588,15 +588,7 @@
   <script>
     'use strict';
     
-    $(window).on('scroll', function () {
-      var visualHeight = $('.brand-visual').offset().top;
-      var scrollAmt = $(document).scrollTop();
-      if (scrollAmt >= (visualHeight * 2)) {
-        $('.brand-visual').addClass('on');
-      } else {
-        $('.brand-visual').removeClass('on');
-      }
-    });
+
   </script>
 </body>
 </html>
