--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </ul>
             </li>
             <li><a href="#">Cotielog</a></li>
-            <li><a href="#">Store</a></li>
+            <li><a href="./store.html">Store</a></li>
             <li class="mobile"><a href="#">About Us</a></li>
             <li class="mobile"><a href="#">Buy Shop</a></li>
           </ul>
