--- a/store.html
+++ b/store.html
@@ -58,7 +58,7 @@
   <script defer src="./js/common.js"></script>
 
 </head>
-<body class="brands">
+<body class="store">
   <div id="wrapper">
     <a href="#main" id="skip-nav">본문 바로가기</a>
 
@@ -174,14 +174,16 @@
         <div class="inner">
 
           <div class="left">
-            <h3 class="store__title">Store</h3>
-            <p class="store__description description">
-              꼬띠샵의 오프라인 매장에서는 제품들을 직접 착용해 볼 수 있어<br class="only-pc" />
-              사이즈 체크가 필요한 반려동물과 함께 방문 가능합니다.
-            </p>
-            <div class="image">
-              <img src="./img/store/store_character_base.jpg" alt="" />
-              <img src="./img/store/store_character_hover.jpg" alt="" />
+            <div class="wrap">
+              <h3 class="store__title">Store</h3>
+              <p class="store__description description">
+                꼬띠샵의 오프라인 매장에서는 제품들을 직접 착용해 볼 수 있어<br class="only-pc" />
+                사이즈 체크가 필요한 반려동물과 함께 방문 가능합니다.
+              </p>
+              <div class="image">
+                <img src="./img/store/store_character_base.jpg" alt="" />
+                <img src="./img/store/store_character_hover.jpg" alt="" />
+              </div>
             </div>
           </div>
           
