--- a/store.html
+++ b/store.html
@@ -358,9 +358,9 @@
       var storeHeight = $('#main .store').outerHeight(true);
       var scrollTop = $(document).scrollTop();
       if ((scrollTop + 500) > storeHeight ) {
-        $('.store .left').addClass('stop');
+        $('.store .left').addClass('off');
       } else {
-        $('.store .left').removeClass('stop');
+        $('.store .left').removeClass('off');
       }
     }
   </script>
