--- a/store.html
+++ b/store.html
@@ -179,7 +179,7 @@
                 꼬띠샵의 오프라인 매장에서는 제품들을 직접 착용해 볼 수 있어<br class="only-pc" />
                 사이즈 체크가 필요한 반려동물과 함께 방문 가능합니다.
               </p>
-              <div class="image">
+              <div class="image pc">
                 <img src="./img/store/store_character_base.jpg" alt="" />
                 <img src="./img/store/store_character_hover.jpg" alt="" />
               </div>
