--- a/brands.html
+++ b/brands.html
@@ -78,14 +78,14 @@
         <nav id="gnb">
           <h2 class="hide">메인 네비게이션</h2>
           <ul>
-            <li>
+            <li class="selected">
               <a href="./brands.html">Brands</a>
               <ul class="sub-menu">
                 <li>
                   <a href="#"><span>펫 소 시크</span></a>
                 </li>
                 <li><a href="#"><span>맥스본</span></a></li>
-                <li><a href="./brands.html"><span>밀크 앤 페퍼</span></a></li>
+                <li class="selected"><a href="./brands.html"><span>밀크 앤 페퍼</span></a></li>
               </ul>
             </li>
             <li>
